tests/NormalTests/paczka1/fuzzy1/14955580.err
Error in line 11: 5poKzCkLA86 S768 65,6
Error in line 13: vVXQ0 A363 54,6
Error in line 22: uN1EKsM98i S696 93,6
Error in line 24: uN1EKsM98i S768 89,5
Error in line 39: vVXQ0 S309 84,4
